--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,101 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap');
+
+:root {
+  --primary: #082323;
+  --secondary: #0a7020;
+}
+h1,h2,h3,h4,h5,h6,p {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: #f2f2f2;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  color: #f7f1f1;
+  font-family: 'Poppins';
+  background: #180606;
+}
+nav {
+  background: var(--primary);
+  padding: 10px 20px;
+  text-align: center;
+}
+nav a {
+  color: #f2f2f2;
+  margin: 10px;
+  display: inline-block;
+}
+nav h1 {
+  color: #fff;
+}
+.page {
+  max-width: 1200px;
+  margin: 20px auto;
+  padding: 20px;
+}
+
+.Contentmate-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 40px;
+  margin-top: 40px;
+}
+.Contentmate-card {
+  background: #5e5b5b;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  width: 100%;
+  box-sizing: border-box;
+  position: relative;
+}
+.Contentmate-card .rating {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background: var(--secondary);
+  color: #e0dfdf;
+  border-radius: 6px;
+  padding: 20px 0;
+  width: 40px;
+  height: 0;
+  line-height: 0px;
+  text-align: center;
+
+}
+/* forms */
+form {
+  padding:20px;
+  background: #4a4848;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  margin: 0 auto;
+  max-width: 400px; 
+
+
+}
+form input {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0 20px 0;
+  box-sizing: border-box;
+  background: #615c5c;
+  display: block;
+  border: 1px solid #ddd;
+}
+form button {
+  
+  padding: 10px;
+  background: var(--primary);
+  color: #edefee;
+  border: 0;
+  border-radius: 5px;
+  cursor: pointer;
+  font-family: "Poppins";
+} 
+img {
+  width: 60%;
+  border-radius: 10px;
+  align-items: center;
+  
 }
